--- a/styles/sofistik-tools.less
+++ b/styles/sofistik-tools.less
@@ -5,3 +5,9 @@
 .sofistik-help > span ~ span {
   color: @text-color-error;
 }
+
+.sofistik-help .keystroke {
+  border: solid 1px;
+  padding: .2em .4em;
+  border-radius: 4px;
+}
