--- a/styles/sofistik-tools.less
+++ b/styles/sofistik-tools.less
@@ -1,13 +1,14 @@
-.sofistik-help > span {
+.sofistik-tools > span {
   color: @text-color-subtle;
 }
 
-.sofistik-help > span ~ span {
-  color: @text-color-error;
-}
-
-.sofistik-help .keystroke {
+.sofistik-tools .keystroke {
   border: solid 1px;
   padding: .2em .4em;
   border-radius: 4px;
+}
+
+.sofistik-tools .empty-message {
+  color: @text-color-error;
+  margin-top: 10px;
 }
