--- a/styles/sofistik-tools.less
+++ b/styles/sofistik-tools.less
@@ -13,3 +13,11 @@
   color: @text-color-error;
   margin-top: 10px;
 }
+
+.sofistik-tools .primary-line .prog {
+  color: @syntax-color-constant;
+  margin-right: 5px;
+  border: solid 1px;
+  padding: .2em .4em;
+  border-radius: 4px;
+}
