--- a/styles/sofistik-tools.less
+++ b/styles/sofistik-tools.less
@@ -17,10 +17,10 @@
 }
 
 .sofistik-tools .primary-line .prog {
-  color: @syntax-color-constant;
+  color: @ui-site-color-2;
   margin-right: 5px;
   border: solid 1px;
   padding: .2em .4em;
   border-radius: 4px;
-  vertical-align: baseline;  
+  vertical-align: baseline;
 }
