migrate to pulsar-select-list

--- a/styles/sofistik-tools.less
+++ b/styles/sofistik-tools.less
@@ -1,26 +1,5 @@
-@import "ui-variables";
+@import "../node_modules/pulsar-select-list/select.less";
 
-.sofistik-tools > span {
-  color: @text-color-subtle;
-  cursor: context-menu;
-}
-
-.sofistik-tools .keystroke {
-  border: solid 1px;
-  padding: .2em .4em;
-  border-radius: 4px;
-}
-
-.sofistik-tools .empty-message {
-  color: @text-color-error;
-  margin-top: 10px;
-}
-
-.sofistik-tools .primary-line .prog {
-  color: @ui-site-color-2;
-  margin-right: 5px;
-  border: solid 1px;
-  padding: .2em .4em;
-  border-radius: 4px;
-  vertical-align: baseline;
+.example-list .tag {
+  color: @ui-site-color-1;
 }
