adapt to new psl

--- a/styles/sofistik-tools.less
+++ b/styles/sofistik-tools.less
@@ -1,5 +1,10 @@
-@import "../node_modules/pulsar-select-list/select.less";
+@import "ui-variables";
 
 .example-list .tag {
-  color: @ui-site-color-1;
+  margin-right: 5px;
+  border: solid 1px;
+  padding: 0.2em 0.4em;
+  border-radius: 6px;
+  vertical-align: baseline;
+  color: @syntax-color-constant;
 }
